@@ -75,7 +75,7 @@ license from being scheduled on this cluster during this reservation.</p>
 <pre>
 $ scontrol create reservation starttime=2009-04-06T16:00:00 \
    duration=120 user=root flags=ignore_jobs \
-   licenses=lustre*1000
+   licenses=lustre:1000
 Reservation created: root_4
 
 $ scontrol show reservation
@@ -168,11 +168,11 @@ licenses field to require one "cpu" for each physical CPU required to satisfy
 the request.</p>
 <pre>
 $ scontrol show configuration | grep Licenses
-Licenses  = cpu*64
+Licenses  = cpu:64
 
 $ scontrol create reservation starttime=2009-04-06T16:00:00 \
    duration=120 user=bob flags=license_only \
-   licenses=cpu*32
+   licenses=cpu:32
 Reservation created: bob_5
 </pre>
 
