@@ -1081,9 +1081,9 @@ A new reservation must specify Users and/or Accounts.
 \fILicenses\fP=<license>
 Specification of licenses (or other resources available on all
 nodes of the cluster) which are to be reserved.
-License names can be followed by an asterisk and count
+License names can be followed by a colon and count
 (the default count is one).
-Multiple license names should be comma separated (e.g. "Licenses=foo*4,bar").
+Multiple license names should be comma separated (e.g. "Licenses=foo:4,bar").
 A new reservation must specify one or more resource to be included: NodeCnt,
 Nodes and/or Licenses.
 
